# rift-poc

rift-0/: CMakeLists.txt  Makefile  erorr.txt  gov.riftrc.0  rift-0-dir-structure.txt  rift-0-dir-tree.txt  rift-gov.txt  rift.txt  schema.json
rift-0/cmake/: RIFTStage0.cmake  rift_stage_macros.cmake
rift-0/config/: gov.riftrc.0  gov.riftrc.0.in.xml
rift-0/fixtures/c-examples/: csv_example.c  lexem-calculation-demo.c
rift-0/fixtures/stage-0/: CMakeLists.txt  main.c
rift-0/fixtures/stage-0/examples/: lang.rift
rift-0/include/rift-0/: lexer.h
rift-0/include/rift-0/cli/: clli.h
rift-0/include/rift-0/core/: config.h.in  rift-0.h  rift-gov.0.h  rift-gov.0.h.backup_20250702_050810  rift_compat.h  rift_tokenizer.h  tokenizer.h.backup_20250702_050810  tokenizer_rules.h
rift-0/scripts/adhoc/: build-rift-dsl.sh  fix-rift-context-structure.sh  implement-rift-dsl-complete.sh
rift-0/src/cli/: main.c
rift-0/src/cli/commands/: rift_gov_command.c
rift-0/src/core/: lexer.c  rift-0-fix.c  rift-0.c
rift-0/src/core/ext/: r_uml.c  r_uml.c.backup_20250702_050809
rift-0/src/core/gov/: r_governance_validation.c  r_governance_validation.c.backup_20250702_050809  rift-gov.0.c  rift-gov.0.c.backup_20250702_050809  stage_queue.c  stage_queue.c.backup_20250702_050809
rift-0/src/core/lexer/: lexer.c  lexer.c.backup_20250702_050809  lexer_flag.c  lexer_flag.c.backup_20250702_050809  rift_tokenizer.c  rift_tokenizer.c.backup_20250702_050809  tokenizer.c  tokenizer.c.backup_20250702_050809  tokenizer_match.c  tokenizer_match.c.backup_20250702_050809  tokenizer_rules.c  tokenizer_rules.c.backup_20250702_050809  tokenizer_utilities.c  tokenizer_utilities.c.backup_20250702_050809
rift-0/src/core/parser/: rift_tb_parser.c  rift_tb_parser.c.backup_20250702_050809
rift-0/tests/: CMakeLists.txt  qa_assert.c
rift-0/tests/unit/: test_policy2_matrix.c  test_rift_dsl.c  test_tokenizer.c  test_tokenizer_validation.c
rift-poc-old-main/rift-poc-stage-0/: CMakeLists.txt  Makefile
rift-poc-old-main/rift-poc-stage-0/QA/: README.md
rift-poc-old-main/rift-poc-stage-0/nlink/: nlink.txt
rift1/: CMakeLists.txt  Makefile  Makefile.stub  Makefile.stub.backup  QA_COMPLIANCE_REPORT.md  README.md  consolidation_report.md  run.sh
rift1/.rift/keys/: rift_private.pem  rift_public.pem
rift1/.rift_backup_1750000867/: Makefile  backup_manifest.txt
rift1/.rift_backup_1750000867/src/core/: rift1_parsing.c
rift1/.rift_backup_1750000867/tests/qa_mocks/: test_automaton.c  test_stage1_comprehensive.c
rift1/.rift_backup_1750000891/: backup_manifest.txt
rift1/.rift_backup_1750000891/include/rift0.deprecated.1749999456.deprecated.1749999464/: rift.h
rift1/.rift_backup_1750000891/include/rift1/: rift.h
rift1/.rift_backup_1750000891/src/cli/: main.c
rift1/.rift_backup_1750000891/src/core/: rift_core.c  token_memory.c
rift1/.rift_backup_1750001538/: README.md  consolidate_rift.sh  rift1_refactor_qa_compliance.sh
rift1/.rift_backup_1750001538/include/rift1/: rift.h
rift1/.rift_backup_1750001538/src/core/: rift1_ast.c
rift1/.rift_backup_1750001538/tests/qa_mocks/: test_framework.c
rift1/.rift_emergency_backup_1750007016/include/: rift.h
rift1/.rift_emergency_backup_1750007016/include/core/: rift.h
rift1/.rift_emergency_backup_1750007016/include/rift1/: rift.h.bak
rift1/.rift_emergency_backup_1750007016/src/cli/: main.c  main.c.bak  main.h  main_original.c  main_original.c.bak  main_original.h
rift1/.rift_emergency_backup_1750007016/src/core/: rift.h  rift1_ast.c  rift1_parsing.c  rift1_parsing.h  rift1_tokenmemory.c  rift1_tokenmemory.c.bak  rift1_tokenmemory.h  rift_core.c  rift_core.h  token_memory.c
rift1/.rift_migration_backup_1750007078/: Makefile
rift1/.rift_migration_backup_1750007078/src/cli/: main.c  main_original.c
rift1/.rift_migration_backup_1750007078/src/core/: rift.h  rift1_ast.c  rift1_ast.c.bak  rift1_ast.h  rift1_parsing.c  rift1_parsing.c.bak  rift1_tokenmemory.c  rift_core.c  token_memory.c  token_memory.h
rift1/QA/: edge_case_registry.md
rift1/cmake/: Config.cmake
rift1/docs/: ARCHITECTURE.md
rift1/examples/complex/: calculator.rift
rift1/examples/simple/: hello.rift  hello.rift.0
rift1/include/: rift.h
rift1/include/core/: rift.h
rift1/include/rift0.deprecated.1749999456.deprecated.1749999464/: rift.h
rift1/include/rift0.deprecated.1749999456.deprecated.1749999464/core/: rift_core_api.h
rift1/include/rift1/: rift.h
rift1/include/rift1/core/: rift.h  rift_ast.h  rift_automaton.h  rift_core.h  rift_errors.h  rift_ir.h  rift_parser.h  rift_token_memory.h  rift_types.h
rift1/include/rift1/lexer/: lexer.h
rift1/include/rift1/rift_files/: rift_format.h
rift1/include/rift1/token_memory/: token_memory.h
rift1/include/rift1/token_types/: token_type.h
rift1/include/rift1/token_values/: token_value.h
rift1/scripts/: generate-samples.sh  rift-orchestrator.sh  setup-modular-system.sh
rift1/scripts/bootstrap/: rift-bootstrap.sh
rift1/scripts/components/: rift-artifacts.sh
rift1/scripts/deployment/: deploy.sh
rift1/scripts/qa/: compliance-check.sh  tdd-runner.sh  validate-pipeline.sh
rift1/scripts/validation/: run_tests.sh  validate-architecture.sh  validate_architecture.sh  validate_obinexus.sh
rift1/src/cli/: cli_args.c  cli_interface.c  main.c  main.h  main_original.c  main_original.h
rift1/src/cli/commands/: command_handler.c  command_handler.h  config_handler.h  pattern_manager.c  pattern_manager.h
rift1/src/core/: CMakeLists.txt  rift1_ast.c  rift1_ast.h  rift1_parsing.c  rift1_parsing.h  rift1_tokenmemory.c  rift1_tokenmemory.h  rift_ast.c  rift_automaton.c  rift_core.h  rift_core_utils.c  rift_ir.c  rift_parser.c  rift_token_memory.c  token_memory.c  token_memory.c.bak  token_memory.h
rift1/src/core/config/: rift_pipeline_simple.c
rift1/src/core/lexer/: lexer.c
rift1/src/core/r_extensions/: r_extensions_core.c  r_extensions_core.h
rift1/src/core/token_memory/: token_memory.c
rift1/src/core/token_types/: token_type.c
rift1/src/core/token_values/: token_value.c
rift1/src/core/tokenizer/: tokenizer.c
(+219 files in other folders)
